bumped up version - libs/project